@@ -1,3 +1,7 @@
+2005-12-17 Kimmo
+ BUG: [ 1379277 ] typo fix for docs
+  Docs/Developers: Plugins.html
+
 2005-12-17 Takashi
  PATCH: [ 1378771 ] Fix for BUG:[ 1376552 ] char offset not getting updated when...
   Src: ChildFrm.cpp MergeEditView.cpp
